--- a/Lab/bridge_lab.html
+++ b/Lab/bridge_lab.html
@@ -14,6 +14,9 @@
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin=""></script> 
         <!-- adding icon-->
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.js"></script>
+        <!-- adding chart -->
     
 
     <!-- link in CSS-->
@@ -26,7 +29,7 @@
 
     <h1>Map of Longest Bridges</h1>
     <div id="bridge-map"></div>
-    <div id="bridge-chart"></div>
+    <canvas id="bridge-chart"></canvas>
 
 </body>
 </html>
